- ExampleGroups no longer need to be constructors
- Fixed finalize for nil error when running specs from the browser

0.2.1
- Using thin 0.8.1
- Fixed server crashing on exception issue.
- Add div id=js_spec_content into the body of the runner html.
- Fixed timeout issues by immediately sending the head of the response.
- Better error message when selenium server is not running

0.2.0
- Using Thin as the server
- Using Selenium to run the browsers
- Added instructions to run JsSpec on CI
- Added js_spec as an executable

0.1.0
- Added RailsServer
- Better namespacing

0.0.1
- Initial Release