@@ -1,0 +1,5 @@
+module Selenium
+  class SeleniumDriver
+    attr_reader :session_id
+  end
+end
