@@ -3,11 +3,12 @@ require File.expand_path("#{File.dirname(__FILE__)}/../../../unit_spec_helper")
 module JsTestCore
   module Resources
     describe Runners::FirefoxRunner do
-      attr_reader :runner, :request, :response, :driver
-
+      attr_reader :runner, :request, :response, :driver, :session_id
+      
       before do
         Thread.current[:connection] = connection
         @driver = "Selenium Driver"
+        @session_id = Guid.new.to_s
         stub(Selenium::SeleniumDriver).new('localhost', 4444, '*firefox', 'http://0.0.0.0:8080') do
           driver
         end
@@ -25,6 +26,7 @@ module JsTestCore
         it "keeps the connection open" do
           stub(driver).start
           stub(driver).open
+          stub(driver).session_id {session_id}
           dont_allow(EventMachine).send_data
           dont_allow(EventMachine).close_connection
           runner.post(request, response)
@@ -37,6 +39,7 @@ module JsTestCore
             request['selenium_host'] = "another-machine"
             stub(driver).start
             stub(driver).open
+            stub(driver).session_id {session_id}
           end
 
           it "starts the Selenium Driver with the passed in selenium_host" do
@@ -52,6 +55,7 @@ module JsTestCore
             request['selenium_host'].should be_nil
             stub(driver).start
             stub(driver).open
+            stub(driver).session_id {session_id}
           end
 
           it "starts the Selenium Driver from localhost" do
@@ -67,6 +71,7 @@ module JsTestCore
             request['selenium_port'] = "4000"
             stub(driver).start
             stub(driver).open
+            stub(driver).session_id {session_id}
           end
 
           it "starts the Selenium Driver with the passed in selenium_port" do
@@ -82,6 +87,7 @@ module JsTestCore
             request['selenium_port'].should be_nil
             stub(driver).start
             stub(driver).open
+            stub(driver).session_id {session_id}
           end
 
           it "starts the Selenium Driver from localhost" do
@@ -102,7 +108,8 @@ module JsTestCore
               driver
             end
             mock(driver).start
-            mock(driver).open("http://another-host:8080/specs/subdir?guid=#{runner.guid}")
+            mock(driver).open("http://another-host:8080/specs/subdir")
+            mock(driver).session_id {session_id}
 
             runner.post(request, response)
           end
@@ -118,7 +125,8 @@ module JsTestCore
 
           it "uses Selenium to run the entire spec suite in Firefox" do
             mock(driver).start
-            mock(driver).open("http://0.0.0.0:8080/specs?guid=#{runner.guid}")
+            mock(driver).open("http://0.0.0.0:8080/specs")
+            mock(driver).session_id {session_id}
 
             runner.post(request, response)
           end
@@ -132,6 +140,7 @@ module JsTestCore
           @runner = Runners::FirefoxRunner.new(request, response)
           stub(driver).start
           stub(driver).open
+          stub(driver).session_id {session_id}
           runner.post(request, response)
         end
 
