@@ -1,3 +1,4 @@
+- Using Selenium session_id instead of a generated guid to identify the session.
 - ExampleGroups no longer need to be constructors
 - Fixed finalize for nil error when running specs from the browser
 
